migrate gpkg